test_data/typeerror/ansible-76373.py
config['changes'] = {sorted(entries) if section != self.config.prelude_name else entries}